# kaggle-bank-fraud

./: .gitignore  Dockerfile  README.md  development.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
src/: inference.py  preprocessing.py  train.py
