[project]
name = "kaggle-bank-fraud"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Bakin",email = "denis.bakin5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
